# django-rtf

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bookstore/: models.py  serializers.py  tests.py
bookstore/migrations/: 0001_initial.py  0002_category_alter_user_email_product_order.py
config/: settings.py  urls.py  views.py
orders/: models.py  serializers.py  tests.py  views.py
orders/migrations/: 0001_initial.py
product/: models.py  tests.py  views.py
product/migrations/: 0001_initial.py
